fix: github button wrapping error in mobile view

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -160,6 +160,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 .header-button:hover {
     color: white;
